--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 baseURL: https://johanbasson.net
 
 languageCode: en-us
-title: "Johan Basson Profile and Blog"
+title: "Johan Basson - Java & Web Developer"
 theme: "toha"
 
 languages:
