--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -10,4 +10,4 @@ contactInfo:
   github: johangwbasson
 
 summary:
-  - I am a Java & Web Software Developer
+  -  Software Developer with 20+ years of experience in computer science, building full stack and cloud based systems. With and aptitude for building Java back-ends and Web front-ends.
